@@ -1,16 +1,16 @@
 package com.michelboudreau.alternator;
 
-import java.io.File;
-import java.io.IOException;
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
-
-import javax.servlet.http.HttpServletRequest;
-
+import com.amazonaws.AmazonServiceException;
+import com.amazonaws.services.dynamodb.model.*;
+import com.amazonaws.services.dynamodb.model.transform.*;
+import com.michelboudreau.alternator.enums.AttributeValueType;
+import com.michelboudreau.alternator.enums.RequestType;
+import com.michelboudreau.alternator.models.ItemRangeGroup;
+import com.michelboudreau.alternator.models.Limits;
+import com.michelboudreau.alternator.models.Table;
+import com.michelboudreau.alternator.parsers.AmazonWebServiceRequestParser;
+import com.michelboudreau.alternator.validators.*;
+import com.michelboudreau.alternatorv2.AlternatorDBApiVersion2Mapper;
 import org.codehaus.jackson.annotate.JsonAutoDetect;
 import org.codehaus.jackson.annotate.JsonMethod;
 import org.codehaus.jackson.map.ObjectMapper;
@@ -18,98 +18,10 @@ import org.codehaus.jackson.map.SerializationConfig;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import com.amazonaws.AmazonServiceException;
-import com.amazonaws.services.dynamodb.model.AttributeAction;
-import com.amazonaws.services.dynamodb.model.AttributeValue;
-import com.amazonaws.services.dynamodb.model.AttributeValueUpdate;
-import com.amazonaws.services.dynamodb.model.BatchGetItemRequest;
-import com.amazonaws.services.dynamodb.model.BatchGetItemResult;
-import com.amazonaws.services.dynamodb.model.BatchResponse;
-import com.amazonaws.services.dynamodb.model.BatchWriteItemRequest;
-import com.amazonaws.services.dynamodb.model.BatchWriteItemResult;
-import com.amazonaws.services.dynamodb.model.BatchWriteResponse;
-import com.amazonaws.services.dynamodb.model.Condition;
-import com.amazonaws.services.dynamodb.model.ConditionalCheckFailedException;
-import com.amazonaws.services.dynamodb.model.CreateTableRequest;
-import com.amazonaws.services.dynamodb.model.CreateTableResult;
-import com.amazonaws.services.dynamodb.model.DeleteItemRequest;
-import com.amazonaws.services.dynamodb.model.DeleteItemResult;
-import com.amazonaws.services.dynamodb.model.DeleteRequest;
-import com.amazonaws.services.dynamodb.model.DeleteTableRequest;
-import com.amazonaws.services.dynamodb.model.DeleteTableResult;
-import com.amazonaws.services.dynamodb.model.DescribeTableRequest;
-import com.amazonaws.services.dynamodb.model.DescribeTableResult;
-import com.amazonaws.services.dynamodb.model.ExpectedAttributeValue;
-import com.amazonaws.services.dynamodb.model.GetItemRequest;
-import com.amazonaws.services.dynamodb.model.GetItemResult;
-import com.amazonaws.services.dynamodb.model.InternalServerErrorException;
-import com.amazonaws.services.dynamodb.model.Key;
-import com.amazonaws.services.dynamodb.model.KeySchema;
-import com.amazonaws.services.dynamodb.model.KeySchemaElement;
-import com.amazonaws.services.dynamodb.model.KeysAndAttributes;
-import com.amazonaws.services.dynamodb.model.LimitExceededException;
-import com.amazonaws.services.dynamodb.model.ListTablesRequest;
-import com.amazonaws.services.dynamodb.model.ListTablesResult;
-import com.amazonaws.services.dynamodb.model.PutItemRequest;
-import com.amazonaws.services.dynamodb.model.PutItemResult;
-import com.amazonaws.services.dynamodb.model.PutRequest;
-import com.amazonaws.services.dynamodb.model.QueryRequest;
-import com.amazonaws.services.dynamodb.model.QueryResult;
-import com.amazonaws.services.dynamodb.model.ResourceInUseException;
-import com.amazonaws.services.dynamodb.model.ResourceNotFoundException;
-import com.amazonaws.services.dynamodb.model.ReturnValue;
-import com.amazonaws.services.dynamodb.model.ScanRequest;
-import com.amazonaws.services.dynamodb.model.ScanResult;
-import com.amazonaws.services.dynamodb.model.TableStatus;
-import com.amazonaws.services.dynamodb.model.UpdateItemRequest;
-import com.amazonaws.services.dynamodb.model.UpdateItemResult;
-import com.amazonaws.services.dynamodb.model.UpdateTableRequest;
-import com.amazonaws.services.dynamodb.model.UpdateTableResult;
-import com.amazonaws.services.dynamodb.model.WriteRequest;
-import com.amazonaws.services.dynamodb.model.transform.BatchGetItemRequestJsonUnmarshaller;
-import com.amazonaws.services.dynamodb.model.transform.BatchGetItemResultMarshaller;
-import com.amazonaws.services.dynamodb.model.transform.BatchWriteItemRequestJsonUnmarshaller;
-import com.amazonaws.services.dynamodb.model.transform.BatchWriteItemResultMarshaller;
-import com.amazonaws.services.dynamodb.model.transform.CreateTableRequestJsonUnmarshaller;
-import com.amazonaws.services.dynamodb.model.transform.CreateTableResultMarshaller;
-import com.amazonaws.services.dynamodb.model.transform.DeleteItemRequestJsonUnmarshaller;
-import com.amazonaws.services.dynamodb.model.transform.DeleteItemResultMarshaller;
-import com.amazonaws.services.dynamodb.model.transform.DeleteTableRequestJsonUnmarshaller;
-import com.amazonaws.services.dynamodb.model.transform.DeleteTableResultMarshaller;
-import com.amazonaws.services.dynamodb.model.transform.DescribeTableRequestJsonUnmarshaller;
-import com.amazonaws.services.dynamodb.model.transform.DescribeTableResultMarshaller;
-import com.amazonaws.services.dynamodb.model.transform.GetItemRequestJsonUnmarshaller;
-import com.amazonaws.services.dynamodb.model.transform.GetItemResultMarshaller;
-import com.amazonaws.services.dynamodb.model.transform.ListTablesRequestJsonUnmarshaller;
-import com.amazonaws.services.dynamodb.model.transform.ListTablesResultMarshaller;
-import com.amazonaws.services.dynamodb.model.transform.PutItemRequestJsonUnmarshaller;
-import com.amazonaws.services.dynamodb.model.transform.PutItemResultMarshaller;
-import com.amazonaws.services.dynamodb.model.transform.QueryRequestJsonUnmarshaller;
-import com.amazonaws.services.dynamodb.model.transform.QueryResultMarshaller;
-import com.amazonaws.services.dynamodb.model.transform.ScanRequestJsonUnmarshaller;
-import com.amazonaws.services.dynamodb.model.transform.ScanResultMarshaller;
-import com.amazonaws.services.dynamodb.model.transform.UpdateItemRequestJsonUnmarshaller;
-import com.amazonaws.services.dynamodb.model.transform.UpdateItemResultMarshaller;
-import com.amazonaws.services.dynamodb.model.transform.UpdateTableRequestJsonUnmarshaller;
-import com.amazonaws.services.dynamodb.model.transform.UpdateTableResultMarshaller;
-import com.michelboudreau.alternator.enums.AttributeValueType;
-import com.michelboudreau.alternator.enums.RequestType;
-import com.michelboudreau.alternator.models.ItemRangeGroup;
-import com.michelboudreau.alternator.models.Limits;
-import com.michelboudreau.alternator.models.Table;
-import com.michelboudreau.alternator.parsers.AmazonWebServiceRequestParser;
-import com.michelboudreau.alternator.validators.CreateTableRequestValidator;
-import com.michelboudreau.alternator.validators.DeleteItemRequestValidator;
-import com.michelboudreau.alternator.validators.DeleteTableRequestValidator;
-import com.michelboudreau.alternator.validators.DescribeTableRequestValidator;
-import com.michelboudreau.alternator.validators.GetItemRequestValidator;
-import com.michelboudreau.alternator.validators.ListTablesRequestValidator;
-import com.michelboudreau.alternator.validators.PutItemRequestValidator;
-import com.michelboudreau.alternator.validators.QueryRequestValidator;
-import com.michelboudreau.alternator.validators.ScanRequestValidator;
-import com.michelboudreau.alternator.validators.UpdateItemRequestValidator;
-import com.michelboudreau.alternator.validators.UpdateTableRequestValidator;
-import com.michelboudreau.alternatorv2.AlternatorDBApiVersion2Mapper;
+import javax.servlet.http.HttpServletRequest;
+import java.io.File;
+import java.io.IOException;
+import java.util.*;
 
 public class AlternatorDBHandler {
     public final String API_VERSION_20111205 = "DynamoDB_20111205";
@@ -774,6 +686,36 @@ public class AlternatorDBHandler {
       }
 	}
 
+    private boolean isComparableInScan(AttributeValue value, AttributeValue comp) {
+        if (comp == null) return false;
+        final AttributeValueType compType = getAttributeValueType(comp);
+        final AttributeValueType valueType = getAttributeValueType(value);
+        return (compType.equals(AttributeValueType.N) || compType.equals(AttributeValueType.S)) && compType.equals(valueType);
+    }
+
+    private int compareForScan(AttributeValue value, AttributeValue comp) {
+        //Get type
+        final AttributeValueType valueType = getAttributeValueType(value);
+        if (valueType.equals(AttributeValueType.S)) return value.getS().compareTo(comp.getS());
+
+        if (valueType.equals(AttributeValueType.N)) {
+            try {
+                return new Long(value.getN()).compareTo(new Long(comp.getN()));
+            } catch (NumberFormatException e) {
+                return new Double(value.getN()).compareTo(new Double(comp.getN()));
+            }
+        }
+
+        throw new IllegalArgumentException("Can only compare String and Number types, got " + valueType);
+    }
+
+    private String getAttributeValueAsString(AttributeValue value) {
+        final AttributeValueType valueType = getAttributeValueType(value);
+        if (valueType.equals(AttributeValueType.N)) return value.getN();
+        if (valueType.equals(AttributeValueType.S)) return value.getS();
+        throw new IllegalArgumentException("Can only return values for Number and String, got " + valueType);
+    }
+
 	public synchronized ScanResult scan(ScanRequest request) {
 		ScanResult result = new ScanResult();
 		List<Error> errors = new ScanRequestValidator().validate(request);
@@ -787,154 +729,84 @@ public class AlternatorDBHandler {
           for (String rangeKey : rangeGroup.getKeySet()) {
 			Map<String, AttributeValue> item = rangeGroup.getItem(rangeKey);
 			if (request.getScanFilter() != null) {
+                //Don't add item immediately - evaluate all conditions first
+                boolean shouldAddItem = true;
 				for (String k : request.getScanFilter().keySet()) {
-					if (item.get(k) != null) {
-						Condition cond = request.getScanFilter().get(k);
-						if (cond.getComparisonOperator() == null) {
+                    //Set this to true if one of conditions matches
+                    boolean conditionMatches = false;
+                    final AttributeValue attribute = item.get(k);
+					if (attribute != null) {
+						final Condition cond = request.getScanFilter().get(k);
+                        final AttributeValue comp = cond.getAttributeValueList().isEmpty() ? null : cond.getAttributeValueList().get(0);
+                        final int condSize = cond.getAttributeValueList().size();
+
+                        if (cond.getComparisonOperator() == null) {
 							throw new ResourceNotFoundException("There must be a comparisonOperator");
 						}
-						if (cond.getComparisonOperator().equals("EQ")) {
-							if (cond.getAttributeValueList().size() == 1) {
-								if (item.get(k).equals(cond.getAttributeValueList().get(0))) {
-									items.add(item);
-								}
-							} else {
-								if (item.get(k).equals(cond.getAttributeValueList())) {
-									items.add(item);
-								}
+
+                        if (cond.getComparisonOperator().equals("EQ")) {
+							if (condSize == 1 && isComparableInScan(attribute, comp)) {
+								conditionMatches = compareForScan(attribute, comp) == 0;
 							}
-						}
+						} else
 						if (cond.getComparisonOperator().equals("LE")) {
-							if (cond.getAttributeValueList().size() == 1) {
-								if (getAttributeValueType(item.get(k)).equals(AttributeValueType.S) || getAttributeValueType(item.get(k)).equals(AttributeValueType.N)) {
-									String value = (getAttributeValueType(item.get(k)).equals(AttributeValueType.S)) ? item.get(k).getS() : item.get(k).getN();
-									String comp = (getAttributeValueType(cond.getAttributeValueList().get(0)).equals(AttributeValueType.S)) ? cond.getAttributeValueList().get(0).getS() : cond.getAttributeValueList().get(0).getN();
-									if (value.compareTo(comp) >= 0) {
-										items.add(item);
-									}
-								} else {
-									//TODO to do
-									//List<String> value = (getAttributeValueType(item.get(k)).equals(AttributeValueType.SS))? item.get(k).getSS() : item.get(k).getNS();
-								}
-
-							} else {
-								//TODO to do
-								if (item.get(k).equals(cond.getAttributeValueList())) {
-									items.add(item);
-								}
-							}
-						}
+							if (condSize == 1 && isComparableInScan(attribute, comp)) {
+                                conditionMatches = compareForScan(attribute, comp) <= 0;
+						    }
+						} else
 						if (cond.getComparisonOperator().equals("LT")) {
-							if (cond.getAttributeValueList().size() == 1) {
-								if (getAttributeValueType(item.get(k)).equals(AttributeValueType.S) || getAttributeValueType(item.get(k)).equals(AttributeValueType.N)) {
-									String value = (getAttributeValueType(item.get(k)).equals(AttributeValueType.S)) ? item.get(k).getS() : item.get(k).getN();
-									String comp = (getAttributeValueType(cond.getAttributeValueList().get(0)).equals(AttributeValueType.S)) ? cond.getAttributeValueList().get(0).getS() : cond.getAttributeValueList().get(0).getN();
-									if (value.compareTo(comp) < 0) {
-										items.add(item);
-									}
-								} else {
-									//TODO to do
-									//List<String> value = (getAttributeValueType(item.get(k)).equals(AttributeValueType.SS))? item.get(k).getSS() : item.get(k).getNS();
-								}
-
-							} else {
-								//TODO to do
-								if (item.get(k).equals(cond.getAttributeValueList())) {
-									items.add(item);
-								}
+							if (condSize == 1 && isComparableInScan(attribute, comp)) {
+                                conditionMatches = compareForScan(attribute, comp) < 0;
 							}
-						}
+						} else
 						if (cond.getComparisonOperator().equals("GE")) {
-							if (cond.getAttributeValueList().size() == 1) {
-								if (getAttributeValueType(item.get(k)).equals(AttributeValueType.S) || getAttributeValueType(item.get(k)).equals(AttributeValueType.N)) {
-									String value = (getAttributeValueType(item.get(k)).equals(AttributeValueType.S)) ? item.get(k).getS() : item.get(k).getN();
-									String comp = (getAttributeValueType(cond.getAttributeValueList().get(0)).equals(AttributeValueType.S)) ? cond.getAttributeValueList().get(0).getS() : cond.getAttributeValueList().get(0).getN();
-									if (value.compareTo(comp) >= 0) {
-										items.add(item);
-									}
-								} else {
-									//TODO to do
-									//List<String> value = (getAttributeValueType(item.get(k)).equals(AttributeValueType.SS))? item.get(k).getSS() : item.get(k).getNS();
-								}
-
-							} else {
-								//TODO to do
-								if (item.get(k).equals(cond.getAttributeValueList())) {
-									items.add(item);
-								}
-							}
-						}
+							if (condSize == 1 && isComparableInScan(attribute, comp)) {
+                                conditionMatches = compareForScan(attribute, comp) >= 0;
+                            }
+						} else
 						if (cond.getComparisonOperator().equals("GT")) {
-							if (cond.getAttributeValueList().size() == 1) {
-								if (getAttributeValueType(item.get(k)).equals(AttributeValueType.S) || getAttributeValueType(item.get(k)).equals(AttributeValueType.N)) {
-									if (getAttributeValueType(item.get(k)).equals(AttributeValueType.S)) {
-										String value = (getAttributeValueType(item.get(k)).equals(AttributeValueType.S)) ? item.get(k).getS() : item.get(k).getN();
-										String comp = (getAttributeValueType(cond.getAttributeValueList().get(0)).equals(AttributeValueType.S)) ? cond.getAttributeValueList().get(0).getS() : cond.getAttributeValueList().get(0).getN();
-										if (value.compareTo(comp) > 0) {
-											items.add(item);
-										}
-									} else {
-										String value = (getAttributeValueType(item.get(k)).equals(AttributeValueType.S)) ? item.get(k).getS() : item.get(k).getN();
-										String comp = (getAttributeValueType(cond.getAttributeValueList().get(0)).equals(AttributeValueType.S)) ? cond.getAttributeValueList().get(0).getS() : cond.getAttributeValueList().get(0).getN();
-										if (Integer.parseInt(value) > Integer.parseInt(comp)) {
-											items.add(item);
-										}
-									}
-								} else {
-									//TODO to do
-									//List<String> value = (getAttributeValueType(item.get(k)).equals(AttributeValueType.SS))? item.get(k).getSS() : item.get(k).getNS();
-								}
-
-							} else {
-								//TODO to do
-								if (item.get(k).equals(cond.getAttributeValueList())) {
-									items.add(item);
-								}
+							if (condSize == 1 && isComparableInScan(attribute, comp)) {
+                                conditionMatches = compareForScan(attribute, comp) > 0;
 							}
-						}
-                        else if (cond.getComparisonOperator().equals("BETWEEN")) {
-                            if (cond.getAttributeValueList().size() == 2) {
-								if (getAttributeValueType(item.get(k)).equals(AttributeValueType.S) || getAttributeValueType(item.get(k)).equals(AttributeValueType.N)) {
-									String value = (getAttributeValueType(item.get(k)).equals(AttributeValueType.S)) ? item.get(k).getS() : item.get(k).getN();
-									String comp0 = (getAttributeValueType(cond.getAttributeValueList().get(0)).equals(AttributeValueType.S)) ? cond.getAttributeValueList().get(0).getS() : cond.getAttributeValueList().get(0).getN();
-									String comp1 = (getAttributeValueType(cond.getAttributeValueList().get(1)).equals(AttributeValueType.S)) ? cond.getAttributeValueList().get(1).getS() : cond.getAttributeValueList().get(1).getN();
-                                    if ((value.compareTo(comp0) >= 0) && (value.compareTo(comp1) <= 0)) {
-                                        items.add(item);
-                                    }
+						} else
+                        if (cond.getComparisonOperator().equals("BETWEEN")) {
+                            if (condSize == 2) {
+                                final AttributeValue comp2 = cond.getAttributeValueList().get(1);
+                                if (isComparableInScan(attribute, comp) && isComparableInScan(attribute, comp2)) {
+                                    conditionMatches = compareForScan(attribute, comp) >= 0 && compareForScan(attribute, comp2) <= 0;
                                 }
                             }
-                        }
-                        else if (cond.getComparisonOperator().equals("BEGINS_WITH")) {
-                            if (cond.getAttributeValueList().size() == 1) {
+                        } else
+                        if (cond.getComparisonOperator().equals("BEGINS_WITH")) {
+                            //TODO: Should we fail on AttributeValueType other than S (as per AWS DynamoDB docs)?
+                            //TODO: Investigate how actual DynamoDB works
+                            if (condSize == 1 && getAttributeValueType(attribute).equals(AttributeValueType.S) &&
+                                    getAttributeValueType(comp).equals(AttributeValueType.S)) {
+                                conditionMatches = attribute.getS().startsWith(comp.getS());
+                            }
+                        } else
+                        if (cond.getComparisonOperator().equals("CONTAINS")) {
+                            if (condSize == 1) {
 								if (getAttributeValueType(item.get(k)).equals(AttributeValueType.S) || getAttributeValueType(item.get(k)).equals(AttributeValueType.N)) {
-									String value = (getAttributeValueType(item.get(k)).equals(AttributeValueType.S)) ? item.get(k).getS() : item.get(k).getN();
-									String comp = (getAttributeValueType(cond.getAttributeValueList().get(0)).equals(AttributeValueType.S)) ? cond.getAttributeValueList().get(0).getS() : cond.getAttributeValueList().get(0).getN();
-                                    if (value.startsWith(comp)) {
-                                        items.add(item);
-                                    }
+									String value = getAttributeValueAsString(attribute);
+									String subs = getAttributeValueAsString(comp);
+                                    conditionMatches = value.contains(subs);
                                 }
                             }
-                        }
-                        else if (cond.getComparisonOperator().equals("CONTAINS")) {
-                            if (cond.getAttributeValueList().size() == 1) {
-								if (getAttributeValueType(item.get(k)).equals(AttributeValueType.S) || getAttributeValueType(item.get(k)).equals(AttributeValueType.N)) {
-									String value = (getAttributeValueType(item.get(k)).equals(AttributeValueType.S)) ? item.get(k).getS() : item.get(k).getN();
-									String comp = (getAttributeValueType(cond.getAttributeValueList().get(0)).equals(AttributeValueType.S)) ? cond.getAttributeValueList().get(0).getS() : cond.getAttributeValueList().get(0).getN();
-                                    if (value.contains(comp)) {
-                                        items.add(item);
-                                    }
-                                }
-                            }
-                        }
+                            //TODO: Check for sets!!!
+                        } else
 						if (cond.getComparisonOperator().equals("IN")) {
 							for(AttributeValue value : cond.getAttributeValueList()){
-								if(item.get(k).equals(value)){
-									items.add(item);
-								}
+								if (item.get(k).equals(value)){
+                                    conditionMatches = true;
+                                    break;
+                                }
 							}
 						}
 					}
+                    shouldAddItem = shouldAddItem && conditionMatches;
 				}
+                if (shouldAddItem) items.add(item);
 			} else {
 				items.add(item);
 			}
@@ -1216,9 +1088,15 @@ public class AlternatorDBHandler {
 			} else if (value.getS() != null) {
 				throw new ConditionalCheckFailedException("It's not possible to ADD on an attribute with a String type for the attribute (" + attributename + ")");
 			} else if (value.getN() != null) {
-				Double i = new Double(value.getN());
-				i = i + new Double(valueUpdate.getValue().getN());
-				value.setN(i + "");
+                try {
+                    Long l = Long.valueOf(value.getN());
+                    l = l + Long.valueOf(valueUpdate.getValue().getN());
+                    value.setN(l + "");
+                } catch (NumberFormatException e) {
+                    Double i = new Double(value.getN());
+                    i = i + new Double(valueUpdate.getValue().getN());
+                    value.setN(i + "");
+                }
 			}
 		}
 	}
